New Publications added
New Publications added

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ categories:
 
 	<div class="col-md-4">
 		<div class="smallhead">
-			<a class="off" href="/papers/">Selected Publications (out of 16)
+			<a class="off" href="/papers/">Selected Publications (9 first/co-firsts out of 19)
 			</a>
 		</div>
 		<div class="bigspacer"></div>
